feat(api): add support for updating specific servers using 'PUT' requests
